# LeoVulkan

./: .gitignore  README.md
ArtoVulkanGuide/: CMakeLists.txt
ArtoVulkanGuide/Assets/Shaders/: ColoredTriangle.frag  ColoredTriangle.vert  DefaultLit.frag  Gradient.comp  Gradient.comp.spv  TextureLit.frag  Triangle.vert  TriangleMesh_DescSet.vert  TriangleMesh_PushConstant.vert  TriangleMesh_SSBO.vert
ArtoVulkanGuide/Framework/: CMakeLists.txt
ArtoVulkanGuide/Framework/AssetLoader/: AssetLoader.cpp  AssetLoader.hpp
ArtoVulkanGuide/Framework/AssetsLoader/: AssetBaker.cpp  AssetsLoader.cpp  AssetsLoader.hpp  MaterialAsset.cpp  MaterialAsset.hpp  MeshAsset.cpp  MeshAsset.hpp  PrefabAsset.cpp  PrefabAsset.hpp  TextureAsset.cpp  TextureAsset.hpp
ArtoVulkanGuide/Framework/VulkanObjects/: VKEngine.cpp  VKEngine.hpp  VKImage.cpp  VKImage.hpp  VKInitializers.cpp  VKInitializers.hpp  VKMesh.cpp  VKMesh.hpp  VKPipeline.cpp  VKPipeline.hpp  VKTexture.cpp  VKTexture.hpp  VKTypes.hpp
ArtoVulkanGuide/Sources/: CMakeLists.txt  Renderer.cpp
LeoVulkan/: LeoVulkan.sln  PropertySheet.props
LeoVulkan/Assets/Models/Barn/: barn.mtl
LeoVulkan/Assets/Shaders/GLSL/: DepthBuffering.frag  DepthBuffering.vert  TextureMapping.frag  TextureMapping.vert  UniformBuffer.vert  VertexBuffer.frag
LeoVulkan/Assets/Shaders/SPIRV/: DepthBuffering.frag.spv  DepthBuffering.vert.spv  TextureMapping.frag.spv  TextureMapping.vert.spv  UniformBuffer.vert.spv  VertexBuffer.frag.spv
LeoVulkan/Lec01_VulkanTest/: Lec01_VulkanTest.cpp  Lec01_VulkanTest.vcxproj  Lec01_VulkanTest.vcxproj.filters
LeoVulkan/Lec02_Triangle/: Lec02_Triangle.cpp  Lec02_Triangle.vcxproj  Lec02_Triangle.vcxproj.filters
LeoVulkan/Lec03_VertexBuffers/: Lec03_VertexBuffers.cpp  Lec03_VertexBuffers.vcxproj  Lec03_VertexBuffers.vcxproj.filters
LeoVulkan/Lec04_UniformBuffers/: Lec04_UniformBuffers.cpp  Lec04_UniformBuffers.vcxproj  Lec04_UniformBuffers.vcxproj.filters
LeoVulkan/Lec05_TextureMapping/: Lec05_TextureMapping.cpp  Lec05_TextureMapping.vcxproj  Lec05_TextureMapping.vcxproj.filters
LeoVulkan/Lec06_DepthBuffering/: Lec06_DepthBuffering.cpp  Lec06_DepthBuffering.vcxproj  Lec06_DepthBuffering.vcxproj.filters
LeoVulkan/Lec07_LoadingModels/: Lec07_LoadingModels.cpp  Lec07_LoadingModels.vcxproj  Lec07_LoadingModels.vcxproj.filters
LeoVulkan/Lec08_GeneratingMipmaps/: Lec08_GeneratingMipmaps.cpp  Lec08_GeneratingMipmaps.vcxproj  Lec08_GeneratingMipmaps.vcxproj.filters
LeoVulkan/Lec09_Multisampling/: Lec09_Multisampling.cpp  Lec09_Multisampling.vcxproj  Lec09_Multisampling.vcxproj.filters
LeoVulkanEngine/: CMakeLists.txt  README.md
LeoVulkanEngine/Assets/Shaders/GLSL/PBR/: FilterCube.vert.spv  GenerateBRDFLUT.frag.spv  PBR.vert.spv
LeoVulkanEngine/Assets/Shaders/GLSL/VulkanRenderer/: Lambert.frag
LeoVulkanEngine/Common/: AssetsLoader.cpp  AssetsLoader.hpp  Benchmark.cpp  Benchmark.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  CmdParser.hpp  Frustum.hpp  KeyCodes.hpp  ProjectPCH.h  ProjectPCH.hpp  ThreadPool.hpp  VKRendererBase.cpp  VKRendererBase.hpp
LeoVulkanEngine/Common/VulkanObject/: VKBuffer.hpp  VKDebug.cpp  VKDebug.hpp  VKDevice.cpp  VKDevice.hpp  VKFrameBuffer.cpp  VKFrameBuffer.hpp  VKInitializers.hpp  VKRendererBase.cpp  VKRendererBase.hpp  VKSwapChain.cpp  VKSwapChain.h  VKTexture.cpp  VKTexture.h  VKTexture.hpp  VKTools.cpp  VKTools.hpp  VKUIOverlay.cpp  VKUIOverlay.hpp
LeoVulkanEngine/Projects/: CMakeLists.txt
LeoVulkanEngine/Projects/TestRenderer/: TestRenderer.cpp  TestRenderer.hpp
LeoVulkanEngine/Projects/VulkanRenderer/: VulkanRenderer.cpp  VulkanRenderer.h
LeoVulkanEngine/Source/: CMakeLists.txt  main.cpp
LeoVulkanEngine/Source/Engine/: VKDescriptors.cpp  VKDescriptors.h  VKEngine.cpp  VKImages.cpp  VKImages.h  VKInitializers.cpp  VKInitializers.h  VKMesh.cpp  VKMesh.h  VKPCH.h  VKTypes.h  VkEngine.h  VkLoader.cpp
LeoVulkanGuide/: CMakeLists.txt
LeoVulkanGuide/Assets/Shaders/GLSL/PBR/: IrradianceCube.frag.spv  PBR_KHR.frag.spv  PrefilterEnvMap.frag.spv  SkyBox.frag.spv  SkyBox.vert.spv
LeoVulkanGuide/Assets/Shaders/GLSL/TestGLTFLoader/: TestGLTFLoaderGLSL.frag  TestGLTFLoaderGLSL.vert
LeoVulkanGuide/Assets/Shaders/GLSL/TestTriangle/: TestTriangleGLSL.vert
LeoVulkanGuide/Assets/Shaders/GLSL/VulkanRenderer/: Lambert.vert  Lambert.vert.spv
LeoVulkanGuide/Common/Utility/: AssetsLoader.hpp  Benchmark.cpp  Benchmark.hpp  CmdLineParser.hpp  Frustum.hpp  ProjectPCH.hpp  ThreadPool.hpp
LeoVulkanGuide/Common/Utility/Assets/: AssetsLoader.cpp  AssetsLoader.hpp  AssetsParser.cpp  AssetsParser.hpp  MaterialAssets.cpp  MaterialAssets.hpp  MeshAssets.cpp  MeshAssets.hpp  PrefabAssets.cpp  PrefabAssets.hpp  TextureAssets.cpp  TextureAssets.hpp
LeoVulkanGuide/Common/VulkanObject/: VKBuffer.cpp  VKDebug.cpp  VKDebug.hpp  VKDevice.cpp  VKDevice.hpp  VKFrameBuffer.hpp  VKRendererBase.cpp  VKRendererBase.hpp  VKSwapChain.cpp  VKSwapChain.hpp  VKTexture.hpp
